syntax = "proto3";
 
package RsIcpxGrpcService;
 
message ReadyMessage {
    bool isReady = 1;
}